added seed folder and files

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -14,5 +14,5 @@
 </div>
 
 <!-- javascript files-->
-<script src="/public/javascript/edit-post.js"></script>
-<script src="/public/javascript/delete-post.js"></script>
+<script src="/javascript/edit-post.js"></script>
+<script src="/javascript/delete-post.js"></script>
