--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,4 +13,4 @@
     </div>
 
 <!-- javascript file-->
-<script src="/public/javascript/login.js"></script>
+<script src="/javascript/login.js"></script>
