--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -13,4 +13,4 @@
 </div>
 
 <!-- javascript file-->
-<script src="/public/javascript/add-post.js"></script>
+<script src="/javascript/add-post.js"></script>
