--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -14,4 +14,4 @@
     </div>
 
 <!-- javascript file-->
-<script src="/public/javascript/signup.js"></script>
+<script src="/javascript/signup.js"></script>
