--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -18,5 +18,5 @@
 
 {{#if loggedIn}}
 <!-- javascript file-->
-<script src="/public/javascript/comment.js"></script>
+<script src="/javascript/comment.js"></script>
 {{/if}}
