--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,12 @@
-*{
-    background-color: grey;
-}
+* {
+    box-sizing: border-box;
+  }
+
+  body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 22px;
+      background-color: lightgray;
+
+  }
